# Cuculus

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.bb7f67d.22  CMakeLists.txt.user.mp2632  CMakeLists.txt.user.t51908  README.md  edflib.c  edflib.h  harmoniereader.cpp  harmoniereader.h  main.cpp  read_signal_file.cpp  read_signal_file.h  wrapper.cpp  wrapper.h  write_edf_file.cpp  write_edf_file.h
